# ALYODCLI

./: .gitignore  ARCHITECTURE.md  C_QUICK_START.md  LICENSE.txt  README.md  SECURITY.md  alyodcli.py  demo.py  pyproject.toml  run_tests.py  setup.py
.github/workflows/: ci.yml  publish-pypi.yml
ALYODCLI/: __init__.py  c_server.py  gui.py  help.py  layout.py  style.py  terminal.py  text.py  text_core.c  text_core.pyx  widgets.py
c_bindings/: CMakeLists.txt  Makefile  README.md  alyodcli.c  alyodcli.h  example_client.c
tests/: demo.py  run_tests.py
