[build-system]
requires = ["setuptools>=68", "wheel", "Cython>=0.29.30"]
build-backend = "setuptools.build_meta"

[project]
name = "alyodcli"
version = "0.2.0"
description = "A terminal text formatting and widget toolkit for Python CLIs"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [
  { name = "Amal Benny", email="amalb1883@gmail.com" }
]
keywords = ["cli", "terminal", "ansi", "text", "widgets"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries",
  "Topic :: Terminals"
]

[project.scripts]
alyodcli-server = "ALYODCLI.c_server:main"

[tool.setuptools]
include-package-data = true
py-modules = ["alyodcli"]

[tool.setuptools.packages.find]
include = ["ALYODCLI*", "alyodcli*"]
